Calendar: Preserver timezone on recurrence instances
The linux-media kernel team have a weekly IRC meeting on 12:00 UTC on Thursdays, creating an apointment for this does not work or render correctly. Steps to re-create:
- Create an appointment in Evolution for 12:00 and set the timezone to UTC
- Save
- Open newly created appointment in calendar
- Note timezone is "None"
- Note that if I look in the future then the appointment does change time correctly when my daylight savings changes. I am using Evolution 3.36.5 on Fedora 32. My local timezone is BST.
Edited by Milan Crha