I#1133 - Calendar: Preserver timezone on recurrence instances

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1133